--- a/app.html
+++ b/app.html
@@ -69,42 +69,58 @@ function getToken() {
          document.cookie.split("; ").find(c => c.startsWith("token="))?.split("=")[1];
 }
 
-document.addEventListener("click", async e => {
+document.addEventListener("click", async function(e) {
   if (e.target.id !== "run-btn") return;
+
   const league = document.getElementById("league").value;
   const home = document.getElementById("home-team").value;
   const away = document.getElementById("away-team").value;
-  if (!home || !away || home.includes("Select")) return alert("Pick both teams");
+
+  if (!home || !away || home.includes("Select") || away.includes("Select")) {
+    alert("Please select both teams");
+    return;
+  }
 
   const btn = e.target;
   btn.disabled = true;
   btn.textContent = "Running 500,000 simulations...";
 
   try {
-    const token = getToken();
-const headers = { "Content-Type": "application/json" };
-if (token) headers["Authorization"] = `Bearer ${token}`;
+    const token = getToken?.();
+    const headers = { "Content-Type": "application/json" };
+    if (token) headers["Authorization"] = `Bearer ${token}`;
 
-const res = await fetch("/.netlify/functions/predict", {
-  method: "POST",
-  headers,
-  body: JSON.stringify({ league, homeTeam: home, awayTeam: away })
-});
+    const res = await fetch("/.netlify/functions/predict", {
+      method: "POST",
+      headers,
+      body: JSON.stringify({ league, homeTeam: home, awayTeam: away })
+    });
 
+    const data = await res.json(); // now always JSON from backend
 
-    document.getElementById("matchup").textContent = data.matchup;
-    document.getElementById("score").textContent = data.projectedScore;
-    document.getElementById("winprob").textContent = data.winProbability;
-    document.getElementById("edge").textContent = data.edge;
-    document.getElementById("explanation").textContent = data.explanation;
-    document.getElementById("result").classList.remove("hidden");
-    document.getElementById("result").scrollIntoView({behavior: "smooth"});
+    if (!res.ok || data.error) {
+      alert(data.error || "Server error running simulations");
+    } else {
+      document.getElementById("matchup").textContent = data.matchup;
+      document.getElementById("score").textContent = data.projectedScore;
+      document.getElementById("winprob").textContent = data.winProbability;
+      document.getElementById("edge").textContent = data.edge;
+      document.getElementById("explanation").textContent = data.explanation;
+
+      document.getElementById("result").classList.remove("hidden");
+      document
+        .getElementById("result")
+        .scrollIntoView({ behavior: "smooth" });
+    }
   } catch (err) {
-    alert("First click woke the server — it works now. Click again.");
+    console.error(err);
+    alert("Something went wrong talking to the server.");
   }
+
   btn.disabled = false;
   btn.textContent = "RUN 500,000 SIMULATIONS";
 });
+
 </script>
 </body>
 </html>
