--- a/index.html
+++ b/index.html
@@ -6,24 +6,69 @@
   <title>ScorePredictor Pro • 500K Sims</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
-    body { font-family: 'Inter', system-ui, sans-serif; background: #0a0a1a; color: white; min-height: 100vh; padding: 2rem; }
-    .btn { background: linear-gradient(45deg, #7c3aed, #ec4899); padding: 1.8rem 4rem; font-size: 2.2rem; font-weight: 900; border-radius: 2rem; box-shadow: 0 25px 50px rgba(124,58,237,0.6); transition: all 0.3s; cursor: pointer; }
-    .btn:hover { transform: translateY(-10px); box-shadow: 0 35px 70px rgba(124,58,237,0.8); }
-    .btn:disabled { opacity: 0.6; cursor: not-allowed; transform: none; }
-    .result { background: rgba(15,15,40,0.9); backdrop-filter: blur(16px); border-radius: 2.5rem; padding: 4rem; margin-top: 4rem; border: 1px solid rgba(139,92,246,0.4); }
+    body {
+      font-family: 'Inter', system-ui, sans-serif;
+      background: #050814;
+      color: white;
+      min-height: 100vh;
+      padding: 1.5rem;
+    }
+    .btn {
+      background: linear-gradient(45deg, #7c3aed, #ec4899);
+      padding: 1rem 2.5rem;
+      font-size: 1.2rem;
+      font-weight: 800;
+      border-radius: 9999px;
+      box-shadow: 0 16px 32px rgba(124,58,237,0.45);
+      transition: all 0.2s;
+      cursor: pointer;
+    }
+    .btn:hover {
+      transform: translateY(-3px);
+      box-shadow: 0 24px 40px rgba(124,58,237,0.6);
+    }
+    .btn:disabled {
+      opacity: 0.6;
+      cursor: not-allowed;
+      transform: none;
+      box-shadow: none;
+    }
+    .result {
+      background: rgba(10, 12, 30, 0.95);
+      backdrop-filter: blur(16px);
+      border-radius: 1.5rem;
+      padding: 1.75rem;
+      margin-top: 2rem;
+      border: 1px solid rgba(139,92,246,0.35);
+    }
+    .stat-card {
+      background: rgba(15,23,42,0.95);
+      border-radius: 1.25rem;
+      padding: 1.25rem 1.5rem;
+      border: 1px solid rgba(148,163,184,0.3);
+    }
   </style>
 </head>
 <body class="antialiased">
 
-<div class="max-w-7xl mx-auto text-center">
-  <h1 class="text-9xl font-black bg-gradient-to-r from-purple-400 via-pink-500 to-red-500 bg-clip-text text-transparent leading-tight">
-    ScorePredictor Pro
-  </h1>
-  <p class="text-5xl mt-6 text-green-400 font-bold tracking-wider">500,000 SIMULATIONS • ADMIN UNLOCKED</p>
+<div class="max-w-5xl mx-auto">
+  <!-- HEADER -->
+  <header class="text-center mb-10">
+    <h1 class="text-4xl md:text-6xl font-black bg-gradient-to-r from-purple-400 via-pink-500 to-red-500 bg-clip-text text-transparent leading-tight">
+      ScorePredictor Pro
+    </h1>
+    <p class="text-base md:text-xl mt-3 text-green-400 font-semibold tracking-wide">
+      500,000 Monte Carlo Simulations • Admin Console
+    </p>
+  </header>
 
-  <div class="bg-white/5 backdrop-blur-xl rounded-3xl p-16 mt-20 shadow-2xl">
-    <div class="grid md:grid-cols-3 gap-10 mb-16 text-2xl">
-      <select id="league" class="bg-white/10 rounded-2xl px-8 py-6 backdrop-blur border border-white/20 focus:outline-none focus:border-purple-500 transition">
+  <!-- INPUT CARD -->
+  <section class="bg-white/5 backdrop-blur-xl rounded-2xl p-6 md:p-8 shadow-xl">
+    <div class="grid md:grid-cols-3 gap-4 mb-6 text-sm md:text-base">
+      <select
+        id="league"
+        class="bg-white/10 rounded-xl px-4 py-3 backdrop-blur border border-white/15 focus:outline-none focus:border-purple-500 transition w-full"
+      >
         <option>NBA</option>
         <option>NFL</option>
         <option>NHL</option>
@@ -31,26 +76,66 @@
         <option>NCAAB</option>
         <option>NCAAF</option>
       </select>
-      <select id="home-team" class="bg-white/10 rounded-2xl px-8 py-6 backdrop-blur border border-white/20 focus:outline-none focus:border-purple-500 transition"><option>Loading teams...</option></select>
-      <select id="away-team" class="bg-white/10 rounded-2xl px-8 py-6 backdrop-blur border border-white/20 focus:outline-none focus:border-purple-500 transition"><option>Loading teams...</option></select>
+
+      <select
+        id="home-team"
+        class="bg-white/10 rounded-xl px-4 py-3 backdrop-blur border border-white/15 focus:outline-none focus:border-purple-500 transition w-full"
+      >
+        <option>Loading teams...</option>
+      </select>
+
+      <select
+        id="away-team"
+        class="bg-white/10 rounded-xl px-4 py-3 backdrop-blur border border-white/15 focus:outline-none focus:border-purple-500 transition w-full"
+      >
+        <option>Loading teams...</option>
+      </select>
     </div>
 
-    <button id="run-btn" class="btn">RUN 500,000 SIMULATIONS</button>
+    <div class="flex justify-center">
+      <button id="run-btn" class="btn">
+        RUN 500,000 SIMULATIONS
+      </button>
+    </div>
 
+    <!-- RESULT -->
     <div id="result" class="result hidden">
-      <h3 id="matchup" class="text-7xl font-black mb-10 text-transparent bg-clip-text bg-gradient-to-r from-yellow-400 to-pink-600"></h3>
-      <div class="grid md:grid-cols-3 gap-16 text-center mb-16">
-        <div><p class="text-3xl opacity-80">Projected Score</p><p id="score" class="text-8xl font-black text-green-400"></p></div>
-        <div><p class="text-3xl opacity-80">Home Win %</p><p id="winprob" class="text-8xl font-black text-yellow-400"></p></div>
-        <div><p class="text-3xl opacity-80">Edge vs Market</p><p id="edge" class="text-9xl font-black text-green-400 leading-tight"></p></div>
+      <h3
+        id="matchup"
+        class="text-2xl md:text-3xl font-extrabold mb-4 text-transparent bg-clip-text bg-gradient-to-r from-yellow-400 to-pink-500 text-center"
+      ></h3>
+
+      <div class="grid md:grid-cols-3 gap-4 mb-4 text-center">
+        <div class="stat-card">
+          <p class="text-xs md:text-sm uppercase tracking-wide text-slate-400 mb-1">
+            Projected Score
+          </p>
+          <p id="score" class="text-2xl md:text-3xl font-black text-green-400"></p>
+        </div>
+        <div class="stat-card">
+          <p class="text-xs md:text-sm uppercase tracking-wide text-slate-400 mb-1">
+            Home Win Probability
+          </p>
+          <p id="winprob" class="text-2xl md:text-3xl font-black text-yellow-400"></p>
+        </div>
+        <div class="stat-card">
+          <p class="text-xs md:text-sm uppercase tracking-wide text-slate-400 mb-1">
+            Edge vs Market
+          </p>
+          <p id="edge" class="text-2xl md:text-3xl font-black text-emerald-400 leading-tight"></p>
+        </div>
       </div>
-      <div class="text-left max-w-4xl mx-auto text-xl leading-relaxed font-medium text-gray-200" id="explanation"></div>
+
+      <div
+        class="text-sm md:text-base leading-relaxed font-medium text-gray-200 mt-2"
+        id="explanation"
+      ></div>
     </div>
-  </div>
+  </section>
 </div>
 
 <script>
-// FIXED: NO MORE SYNTAX ERRORS — EVERY TEAM LOADS 100%
+// TEAM LISTS
 const TEAMS = {
   NBA: ["Atlanta Hawks","Boston Celtics","Brooklyn Nets","Charlotte Hornets","Chicago Bulls","Cleveland Cavaliers","Dallas Mavericks","Denver Nuggets","Detroit Pistons","Golden State Warriors","Houston Rockets","Indiana Pacers","LA Clippers","Los Angeles Lakers","Memphis Grizzlies","Miami Heat","Milwaukee Bucks","Minnesota Timberwolves","New Orleans Pelicans","New York Knicks","Oklahoma City Thunder","Orlando Magic","Philadelphia 76ers","Phoenix Suns","Portland Trail Blazers","Sacramento Kings","San Antonio Spurs","Toronto Raptors","Utah Jazz","Washington Wizards"],
   NFL: ["Arizona Cardinals","Atlanta Falcons","Baltimore Ravens","Buffalo Bills","Carolina Panthers","Chicago Bears","Cincinnati Bengals","Cleveland Browns","Dallas Cowboys","Denver Broncos","Detroit Lions","Green Bay Packers","Houston Texans","Indianapolis Colts","Jacksonville Jaguars","Kansas City Chiefs","Las Vegas Raiders","Los Angeles Chargers","Los Angeles Rams","Miami Dolphins","Minnesota Vikings","New England Patriots","New Orleans Saints","New York Giants","New York Jets","Philadelphia Eagles","Pittsburgh Steelers","San Francisco 49ers","Seattle Seahawks","Tampa Bay Buccaneers","Tennessee Titans","Washington Commanders"],
@@ -60,17 +145,19 @@ const TEAMS = {
   NCAAF: ["Air Force","Akron","Alabama","App State","Arizona","Arizona State","Arkansas","Arkansas State","Army","Auburn","Ball State","Baylor","Boise State","Boston College","Bowling Green","Buffalo","BYU","California","Central Michigan","Charlotte","Cincinnati","Clemson","Coastal Carolina","Colorado","Colorado State","UConn","Duke","East Carolina","Eastern Michigan","FIU","Florida","Florida Atlantic","Florida State","Fresno State","Georgia","Georgia Southern","Georgia State","Georgia Tech","Hawaii","Houston","Illinois","Indiana","Iowa","Iowa State","Jacksonville State","James Madison","Kansas","Kansas State","Kent State","Kentucky","Kennesaw State","Liberty","Louisiana","Louisiana Tech","Louisville","LSU","Marshall","Maryland","Massachusetts","Memphis","Miami","Miami (OH)","Michigan","Michigan State","Middle Tennessee","Minnesota","Mississippi State","Missouri","Navy","Nebraska","Nevada","New Mexico","New Mexico State","North Carolina","NC State","North Texas","Northern Illinois","Northwestern","Notre Dame","Ohio","Ohio State","Oklahoma","Oklahoma State","Old Dominion","Ole Miss","Oregon","Oregon State","Penn State","Pittsburgh","Purdue","Rice","Rutgers","Sam Houston","San Diego State","San Jose State","SMU","South Alabama","South Carolina","South Florida","Southern Miss","Stanford","Syracuse","TCU","Temple","Tennessee","Texas","Texas A&M","Texas State","Texas Tech","Toledo","Troy","Tulane","Tulsa","UAB","UCF","UCLA","UNLV","USC","UTEP","UTSA","Utah","Utah State","Vanderbilt","Virginia","Virginia Tech","Wake Forest","Washington","Washington State","West Virginia","Western Kentucky","Western Michigan","Wisconsin","Wyoming"]
 };
 
-// Populate teams instantly — FIXED
+// populate teams
 function populateTeams() {
   const league = document.getElementById("league").value;
   const teams = TEAMS[league] || [];
   ["home-team", "away-team"].forEach(id => {
     const select = document.getElementById(id);
-    select.innerHTML = "<option>Select Team</option>" + teams.map(t => `<option>${t}</option>`).join("");
+    select.innerHTML =
+      "<option>Select Team</option>" +
+      teams.map(t => `<option>${t}</option>`).join("");
   });
 }
 document.getElementById("league").addEventListener("change", populateTeams);
-populateTeams(); // ← This line was missing in some versions
+populateTeams();
 
 function getToken() {
   return new URLSearchParams(location.search).get("token") ||
@@ -94,7 +181,7 @@ document.addEventListener("click", async function(e) {
   btn.textContent = "Running 500,000 simulations...";
 
   try {
-    const token = getToken?.();
+    const token = getToken();
     const headers = { "Content-Type": "application/json" };
     if (token) headers["Authorization"] = `Bearer ${token}`;
 
@@ -104,7 +191,7 @@ document.addEventListener("click", async function(e) {
       body: JSON.stringify({ league, homeTeam: home, awayTeam: away })
     });
 
-    const data = await res.json(); // now always JSON from backend
+    const data = await res.json();
 
     if (!res.ok || data.error) {
       alert(data.error || "Server error running simulations");
@@ -115,10 +202,9 @@ document.addEventListener("click", async function(e) {
       document.getElementById("edge").textContent = data.edge;
       document.getElementById("explanation").textContent = data.explanation;
 
-      document.getElementById("result").classList.remove("hidden");
-      document
-        .getElementById("result")
-        .scrollIntoView({ behavior: "smooth" });
+      const result = document.getElementById("result");
+      result.classList.remove("hidden");
+      result.scrollIntoView({ behavior: "smooth" });
     }
   } catch (err) {
     console.error(err);
