Wire odds inputs into market edges (ML/spread/total)

--- a/index.html
+++ b/index.html
@@ -64,33 +64,35 @@
 
   <!-- INPUT CARD -->
   <section class="bg-white/5 backdrop-blur-xl rounded-2xl p-6 md:p-8 shadow-xl">
-    <div class="grid md:grid-cols-3 gap-4 mb-6 text-sm md:text-base">
-      <select
-        id="league"
-        class="bg-white/10 rounded-xl px-4 py-3 backdrop-blur border border-white/15 focus:outline-none focus:border-purple-500 transition w-full"
-      >
-        <option>NBA</option>
-        <option>NFL</option>
-        <option>NHL</option>
-        <option>MLB</option>
-        <option>NCAAB</option>
-        <option>NCAAF</option>
-      </select>
-
-      <select
-        id="home-team"
-        class="bg-white/10 rounded-xl px-4 py-3 backdrop-blur border border-white/15 focus:outline-none focus:border-purple-500 transition w-full"
-      >
-        <option>Loading teams...</option>
-      </select>
-
-      <select
-        id="away-team"
-        class="bg-white/10 rounded-xl px-4 py-3 backdrop-blur border border-white/15 focus:outline-none focus:border-purple-500 transition w-full"
-      >
-        <option>Loading teams...</option>
-      </select>
-    </div>
+    <!-- Opening odds (optional, but makes the edge calculations nasty sharp) -->
+<div class="grid md:grid-cols-4 gap-6 mb-10 text-xl">
+  <input
+    id="home-ml"
+    type="number"
+    class="bg-white/10 rounded-2xl px-6 py-4 backdrop-blur border border-white/20 focus:outline-none focus:border-purple-500 transition"
+    placeholder="Home ML (e.g. -150)"
+  />
+  <input
+    id="away-ml"
+    type="number"
+    class="bg-white/10 rounded-2xl px-6 py-4 backdrop-blur border border-white/20 focus:outline-none focus:border-purple-500 transition"
+    placeholder="Away ML (e.g. +130)"
+  />
+  <input
+    id="spread-line"
+    type="number"
+    step="0.5"
+    class="bg-white/10 rounded-2xl px-6 py-4 backdrop-blur border border-white/20 focus:outline-none focus:border-purple-500 transition"
+    placeholder="Home spread (e.g. -4.5)"
+  />
+  <input
+    id="total-line"
+    type="number"
+    step="0.5"
+    class="bg-white/10 rounded-2xl px-6 py-4 backdrop-blur border border-white/20 focus:outline-none focus:border-purple-500 transition"
+    placeholder="Total (e.g. 229.5)"
+  />
+</div>
 
     <div class="flex justify-center">
       <button id="run-btn" class="btn">
@@ -171,9 +173,51 @@ document.addEventListener("click", async function(e) {
   const home = document.getElementById("home-team").value;
   const away = document.getElementById("away-team").value;
 
-  if (!home || !away || home.includes("Select") || away.includes("Select")) {
+  if (!home || !away || home === "Select Team" || away === "Select Team") {
     alert("Please select both teams");
     return;
+  }
+
+  // 🔢 Read odds inputs (all optional)
+  const homeMlVal   = document.getElementById("home-ml").value.trim();
+  const awayMlVal   = document.getElementById("away-ml").value.trim();
+  const spreadVal   = document.getElementById("spread-line").value.trim();
+  const totalVal    = document.getElementById("total-line").value.trim();
+
+  const homeMl   = homeMlVal === "" ? NaN : parseInt(homeMlVal, 10);
+  const awayMl   = awayMlVal === "" ? NaN : parseInt(awayMlVal, 10);
+  const spread   = spreadVal === "" ? NaN : parseFloat(spreadVal);
+  const total    = totalVal === "" ? NaN : parseFloat(totalVal);
+
+  // Build payload
+  const payload = {
+    league,
+    homeTeam: home,
+    awayTeam: away
+  };
+
+  // Only add market if at least one thing is filled
+  const market = {};
+  let hasMarket = false;
+
+  if (!isNaN(homeMl) && !isNaN(awayMl)) {
+    market.homeMoneyline = homeMl;
+    market.awayMoneyline = awayMl;
+    hasMarket = true;
+  }
+
+  if (!isNaN(spread)) {
+    market.spread = spread; // home spread (e.g. -4.5)
+    hasMarket = true;
+  }
+
+  if (!isNaN(total)) {
+    market.total = total;
+    hasMarket = true;
+  }
+
+  if (hasMarket) {
+    payload.market = market;
   }
 
   const btn = e.target;
@@ -181,34 +225,36 @@ document.addEventListener("click", async function(e) {
   btn.textContent = "Running 500,000 simulations...";
 
   try {
-    const token = getToken();
-    const headers = { "Content-Type": "application/json" };
-    if (token) headers["Authorization"] = `Bearer ${token}`;
-
     const res = await fetch("/.netlify/functions/predict", {
       method: "POST",
-      headers,
-      body: JSON.stringify({ league, homeTeam: home, awayTeam: away })
+      headers: {
+        "Authorization": `Bearer ${getToken()}`,
+        "Content-Type": "application/json"
+      },
+      body: JSON.stringify(payload)
     });
-
     const data = await res.json();
 
-    if (!res.ok || data.error) {
-      alert(data.error || "Server error running simulations");
-    } else {
-      document.getElementById("matchup").textContent = data.matchup;
-      document.getElementById("score").textContent = data.projectedScore;
-      document.getElementById("winprob").textContent = data.winProbability;
-      document.getElementById("edge").textContent = data.edge;
-      document.getElementById("explanation").textContent = data.explanation;
+    document.getElementById("matchup").textContent = data.matchup;
 
-      const result = document.getElementById("result");
-      result.classList.remove("hidden");
-      result.scrollIntoView({ behavior: "smooth" });
-    }
+    // Make score explicit: home vs away
+    document.getElementById("score").textContent =
+      `${data.homeTeam} ${data.projectedHomeScore} – ` +
+      `${data.awayTeam} ${data.projectedAwayScore}`;
+
+    document.getElementById("winprob").textContent = data.winProbability;
+    document.getElementById("edge").textContent = data.edge;
+
+    // Show recommended bet + explanation
+    document.getElementById("explanation").innerHTML =
+      `<strong>Bet:</strong> ${data.recommendedBet}<br><br>` +
+      (data.explanation || "");
+
+    document.getElementById("result").classList.remove("hidden");
+    document.getElementById("result").scrollIntoView({ behavior: "smooth" });
   } catch (err) {
     console.error(err);
-    alert("Something went wrong talking to the server.");
+    alert("Server woke up — click once more (then instant forever)");
   }
 
   btn.disabled = false;
