--- a/app.html
+++ b/app.html
@@ -1,125 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ScorePredictor Pro • 500K Sims</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <meta charset="UTF-8" />
+  <title>ScorePredictor Pro</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Instant redirect to new main app -->
+  <meta http-equiv="refresh" content="0; url=/" />
+  <script>
+    // JS fallback redirect
+    window.location.replace("/");
+  </script>
+
   <style>
-    body { font-family: 'Inter', sans-serif; background: #0a0a1a; color: white; min-height: 100vh; padding: 2rem; }
-    .btn { background: linear-gradient(45deg, #7c3aed, #ec4899); padding: 1.8rem 4rem; font-size: 2.2rem; font-weight: 900; border-radius: 2rem; box-shadow: 0 25px 50px rgba(124,58,237,0.6); transition: all 0.3s; }
-    .btn:hover { transform: translateY(-10px); box-shadow: 0 35px 70px rgba(124,58,237,0.8); }
-    .result { background: rgba(15,15,40,0.8); backdrop-filter: blur(16px); border-radius: 2.5rem; padding: 4rem; margin-top: 4rem; border: 1px solid rgba(139,92,246,0.3); }
+    body {
+      margin: 0;
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: #0a0a1a;
+      color: #e5e7eb;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+    }
+    .box {
+      text-align: center;
+      padding: 2rem 3rem;
+      border-radius: 1.5rem;
+      background: rgba(15, 23, 42, 0.9);
+      box-shadow: 0 20px 40px rgba(0, 0, 0, 0.6);
+      max-width: 480px;
+    }
+    h1 {
+      font-size: 1.6rem;
+      margin-bottom: 0.75rem;
+    }
+    p {
+      opacity: 0.7;
+      font-size: 0.95rem;
+    }
+    a {
+      color: #a855f7;
+      text-decoration: none;
+      font-weight: 600;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
-
-<div class="max-w-7xl mx-auto text-center">
-  <h1 class="text-9xl font-black bg-gradient-to-r from-purple-400 via-pink-500 to-red-500 bg-clip-text text-transparent">
-    ScorePredictor Pro
-  </h1>
-  <p class="text-5xl mt-6 text-green-400 font-bold">500,000 SIMULATIONS • ADMIN UNLOCKED</p>
-
-  <div class="bg-white/5 backdrop-blur-xl rounded-3xl p-16 mt-20">
-    <div class="grid md:grid-cols-3 gap-10 mb-16 text-2xl">
-      <select id="league" class="bg-white/10 rounded-2xl px-8 py-6 backdrop-blur border border-white/20">
-        <option>NBA</option><option>NFL</option><option>NHL</option><option>MLB</option><option>NCAAB</option><option>NCAAF</option>
-      </select>
-      <select id="home-team" class="bg-white/10 rounded-2xl px-8 py-6 backdrop-blur border border-white/20"><option>Select Home Team</option></select>
-      <select id="away-team" class="bg-white/10 rounded-2xl px-8 py-6 backdrop-blur border border-white/20"><option>Select Away Team</option></select>
-    </div>
-
-    <button id="run-btn" class="btn">RUN 500,000 SIMULATIONS</button>
-
-    <div id="result" class="result hidden">
-      <h3 id="matchup" class="text-7xl font-black mb-10 text-transparent bg-clip-text bg-gradient-to-r from-yellow-400 to-pink-600"></h3>
-      <div class="grid md:grid-cols-3 gap-16 text-center mb-16">
-        <div><p class="text-3xl opacity-80">Projected Score</p><p id="score" class="text-8xl font-black text-green-400"></p></div>
-        <div><p class="text-3xl opacity-80">Home Win %</p><p id="winprob" class="text-8xl font-black text-yellow-400"></p></div>
-        <div><p class="text-3xl opacity-80">Edge vs Market</p><p id="edge" class="text-9xl font-black text-green-400"></p></div>
-      </div>
-      <div class="text-left max-w-4xl mx-auto text-xl leading-relaxed" id="explanation"></div>
-    </div>
+  <div class="box">
+    <h1>Redirecting to ScorePredictor Pro…</h1>
+    <p>If you are not redirected automatically, <a href="/">click here</a>.</p>
   </div>
-</div>
-
-<script>
-// FULL TEAM LISTS — EVERY SINGLE ONE (351 NCAAB, 134 NCAAF, all pros)
-const TEAMS = {
-  NBA: ["Atlanta Hawks","Boston Celtics","Brooklyn Nets","Charlotte Hornets","Chicago Bulls","Cleveland Cavaliers","Dallas Mavericks","Denver Nuggets","Detroit Pistons","Golden State Warriors","Houston Rockets","Indiana Pacers","LA Clippers","Los Angeles Lakers","Memphis Grizzlies","Miami Heat","Milwaukee Bucks","Minnesota Timberwolves","New Orleans Pelicans","New York Knicks","Oklahoma City Thunder","Orlando Magic","Philadelphia 76ers","Phoenix Suns","Portland Trail Blazers","Sacramento Kings","San Antonio Spurs","Toronto Raptors","Utah Jazz","Washington Wizards"],
-  NFL: ["Arizona Cardinals","Atlanta Falcons","Baltimore Ravens","Buffalo Bills","Carolina Panthers","Chicago Bears","Cincinnati Bengals","Cleveland Browns","Dallas Cowboys","Denver Broncos","Detroit Lions","Green Bay Packers","Houston Texans","Indianapolis Colts","Jacksonville Jaguars","Kansas City Chiefs","Las Vegas Raiders","Los Angeles Chargers","Los Angeles Rams","Miami Dolphins","Minnesota Vikings","New England Patriots","New Orleans Saints","New York Giants","New York Jets","Philadelphia Eagles","Pittsburgh Steelers","San Francisco 49ers","Seattle Seahawks","Tampa Bay Buccaneers","Tennessee Titans","Washington Commanders"],
-  NCAAB: ["Abilene Christian","Air Force","Akron","Alabama","Alabama A&M","Alabama State","Alcorn State","American","App State","Arizona","Arizona State","Arkansas","Little Rock","Arkansas State","Army","Auburn","Austin Peay","Ball State","Baylor","Belmont","Bethune-Cookman","Binghamton","Boise State","Boston College","Boston U","Bowling Green","Bradley","Brown","Bryant","Bucknell","Butler","BYU","Cal","Cal Baptist","Cal Poly","Cal State Bakersfield","Cal State Fullerton","Cal State Northridge","Campbell","Canisius","Central Arkansas","Central Connecticut","Charleston","Charlotte","Chattanooga","Chicago State","Cincinnati","The Citadel","Clemson","Cleveland State","Coastal Carolina","Colgate","Colorado","Colorado State","Columbia","Coppin State","Cornell","Creighton","Dartmouth","Davidson","Dayton","Delaware","Delaware State","Denver","DePaul","Detroit Mercy","Drake","Drexel","Duke","Duquesne","East Carolina","Eastern Illinois","Eastern Kentucky","Eastern Michigan","Eastern Washington","Elon","Evansville","Fairfield","Fairleigh Dickinson","Florida","Florida A&M","Florida Atlantic","Florida Gulf Coast","Florida International","Florida State","Fordham","Fresno State","Furman","Gardner-Webb","George Mason","George Washington","Georgetown","Georgia","Georgia Southern","Georgia State","Georgia Tech","Gonzaga","Grambling","Grand Canyon","Green Bay","Hampton","Harvard","Hawaii","High Point","Hofstra","Holy Cross","Houston","Howard","Idaho","Idaho State","Illinois","Illinois State","Indiana","Indiana State","Iona","Iowa","Iowa State","IUPUI","Jackson State","Jacksonville","Jacksonville State","James Madison","Kansas","Kansas State","Kennesaw State","Kent State","Kentucky","La Salle","Lafayette","Lamar","Lehigh","Liberty","Lindenwood","Lipscomb","Long Beach State","Long Island","Longwood","Louisiana","Louisiana Tech","Louisville","Loyola Chicago","Loyola Marymount","Loyola Maryland","LSU","Maine","Manhattan","Marist","Marquette","Marshall","Maryland","UMass","McNeese","Memphis","Mercer","Miami","Miami (OH)","Michigan","Michigan State","Middle Tennessee","Milwaukee","Minnesota","Mississippi State","Missouri","Missouri State","Monmouth","Montana","Montana State","Morehead State","Morgan State","Mount St. Mary's","Murray State","Navy","NC State","Nebraska","Nevada","New Hampshire","New Mexico","New Mexico State","Niagara","Nicholls","Norfolk State","North Alabama","North Carolina","NC A&T","NC Central","North Dakota","North Dakota State","North Florida","Northeastern","Northern Arizona","Northern Colorado","Northern Illinois","Northern Iowa","Northern Kentucky","North Texas","Northwestern","Northwestern State","Notre Dame","Oakland","Ohio","Ohio State","Oklahoma","Oklahoma State","Old Dominion","Ole Miss","Omaha","Oral Roberts","Oregon","Oregon State","Pacific","Penn","Penn State","Pepperdine","Pittsburgh","Portland","Portland State","Prairie View","Presbyterian","Princeton","Providence","Purdue","Queens","Quinnipiac","Radford","Rhode Island","Rice","Richmond","Rider","Robert Morris","Rutgers","Sacramento State","Sacred Heart","Saint Joseph's","Saint Louis","Saint Mary's","Saint Peter's","Samford","Sam Houston","San Diego","San Diego State","San Francisco","San Jose State","Santa Clara","Seattle","Seton Hall","Siena","South Alabama","South Carolina","South Carolina State","South Dakota","South Dakota State","South Florida","Southeast Missouri","Southeastern Louisiana","Southern","Southern Illinois","Southern Miss","Southern Utah","St. Bonaventure","St. Francis (PA)","St. John's","Stanford","Stephen F. Austin","Stetson","Stonehill","Stony Brook","Syracuse","Tarleton","TCU","Temple","Tennessee","Tennessee State","Tennessee Tech","Texas","Texas A&M","Texas A&M-Commerce","Texas Southern","Texas State","Texas Tech","Toledo","Towson","Troy","Tulane","Tulsa","UAB","UC Davis","UC Irvine","UC Riverside","UC San Diego","UC Santa Barbara","UCF","UCLA","UMass Lowell","UMBC","UNC Asheville","UNC Greensboro","UNC Wilmington","UNLV","USC","UT Arlington","UTEP","UT Martin","UT Rio Grande Valley","UTSA","Utah","Utah State","Utah Tech","Utah Valley","Valparaiso","Vanderbilt","VCU","Vermont","Villanova","Virginia","Virginia Tech","VMI","Wagner","Wake Forest","Washington","Washington State","Weber State","West Virginia","Western Carolina","Western Illinois","Western Kentucky","Western Michigan","Wichita State","William & Mary","Winthrop","Wisconsin","Wofford","Wright State","Wyoming","Xavier","Yale","Youngstown State"],
-  NCAAF: ["Air Force","Akron","Alabama","App State","Arizona","Arizona State","Arkansas","Arkansas State","Army","Auburn","Ball State","Baylor","Boise State","Boston College","Bowling Green","Buffalo","BYU","California","Central Michigan","Charlotte","Cincinnati","Clemson","Coastal Carolina","Colorado","Colorado State","UConn","Duke","East Carolina","Eastern Michigan","FIU","Florida","Florida Atlantic","Florida State","Fresno State","Georgia","Georgia Southern","Georgia State","Georgia Tech","Hawaii","Houston","Illinois","Indiana","Iowa","Iowa State","Jacksonville State","James Madison","Kansas","Kansas State","Kent State","Kentucky","Kennesaw State","Liberty","Louisiana","Louisiana Tech","Louisville","LSU","Marshall","Maryland","Massachusetts","Memphis","Miami","Miami (OH)","Michigan","Michigan State","Middle Tennessee","Minnesota","Mississippi State","Missouri","Navy","Nebraska","Nevada","New Mexico","New Mexico State","North Carolina","NC State","North Texas","Northern Illinois","Northwestern","Notre Dame","Ohio","Ohio State","Oklahoma","Oklahoma State","Old Dominion","Ole Miss","Oregon","Oregon State","Penn State","Pittsburgh","Purdue","Rice","Rutgers","Sam Houston","San Diego State","San Jose State","SMU","South Alabama","South Carolina","South Florida","Southern Miss","Stanford","Syracuse","TCU","Temple","Tennessee","Texas","Texas A&M","Texas State","Texas Tech","Toledo","Troy","Tulane","Tulsa","UAB","UCF","UCLA","UNLV","USC","UTEP","UTSA","Utah","Utah State","Vanderbilt","Virginia","Virginia Tech","Wake Forest","Washington","Washington State","West Virginia","Western Kentucky","Western Michigan","Wisconsin","Wyoming"]
-};
-
-// Populate teams instantly
-function populate() {
-  const league = document.getElementById("league").value;
-  const teams = TEAMS[league] || [];
-  ["home-team", "away-team"].forEach(id => {
-    const el = document.getElementById(id);
-    el.innerHTML = "<option>Select Team</option>" + teams.map(t => `<option>${t}</option>`).join("");
-  });
-}
-document.getElementById("league").onchange = populate;
-populate();
-
-function getToken() {
-  return new URLSearchParams(location.search).get("token") || 
-         document.cookie.split("; ").find(c => c.startsWith("token="))?.split("=")[1];
-}
-
-document.addEventListener("click", async function(e) {
-  if (e.target.id !== "run-btn") return;
-
-  const league = document.getElementById("league").value;
-  const home = document.getElementById("home-team").value;
-  const away = document.getElementById("away-team").value;
-
-  if (!home || !away || home.includes("Select") || away.includes("Select")) {
-    alert("Please select both teams");
-    return;
-  }
-
-  const btn = e.target;
-  btn.disabled = true;
-  btn.textContent = "Running 500,000 simulations...";
-
-  try {
-    const token = getToken?.();
-    const headers = { "Content-Type": "application/json" };
-    if (token) headers["Authorization"] = `Bearer ${token}`;
-
-    const res = await fetch("/.netlify/functions/predict", {
-      method: "POST",
-      headers,
-      body: JSON.stringify({ league, homeTeam: home, awayTeam: away })
-    });
-
-    const data = await res.json(); // now always JSON from backend
-
-    if (!res.ok || data.error) {
-      alert(data.error || "Server error running simulations");
-    } else {
-      document.getElementById("matchup").textContent = data.matchup;
-      document.getElementById("score").textContent = data.projectedScore;
-      document.getElementById("winprob").textContent = data.winProbability;
-      document.getElementById("edge").textContent = data.edge;
-      document.getElementById("explanation").textContent = data.explanation;
-
-      document.getElementById("result").classList.remove("hidden");
-      document
-        .getElementById("result")
-        .scrollIntoView({ behavior: "smooth" });
-    }
-  } catch (err) {
-    console.error(err);
-    alert("Something went wrong talking to the server.");
-  }
-
-  btn.disabled = false;
-  btn.textContent = "RUN 500,000 SIMULATIONS";
-});
-</script>
 </body>
 </html>
